[metadata]
name = AgentBlock
version = 0.1.0
author = Seo Seong Woo
author_email = swseo.astro@gmail.com
description = A short description of the package
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/swseo92/AgentBlock
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.11
install_requires =
    # 필요한 의존성 목록 (예: requests >= 2.0, etc.)

[options.packages.find]
where=src
